# scte35-inserter

./: CMakeLists.txt  Dockerfile  Pipeline.cpp  Pipeline.h  README.md  main.cpp
utils/: ScopedGstObject.h
